# Rust-Candlechart

./: CODE_ANALYSIS_FINAL.md  CODE_ANALYSIS_REPORT.md  CODE_REVIEW_SUMMARY.md  CORRECTIONS_APPLIQUEES.md  CORRECTIONS_DEAD_CODE.md  Cargo.toml  FIXES_APPLIED.md  REFACTORING_ANALYSIS.md  chart_style.json  drawings.json  panel_state.json  provider_config.json
crateTeste/: Cargo.toml  README.md
crateTeste/src/: main.rs  main_advanced.rs  main_simple.rs
data/: BTCUSDT_1d.json  BTCUSDT_4h.json
docs/: ARCHITECTURE.md  DATA_STRUCTURES.md  FLOW_DIAGRAMS.md  INDEX.md  LIBRARY.md  MODULES.md  PROVIDERS.md  README.md  REALTIME.md  USAGE.md
docs/crate-api/: API.md  SIMPLE_API.md
src/: lib.rs  main.rs
src/app/: account_info.rs  account_type.rs  app_state.rs  bottom_panel_sections.rs  constants.rs  data_loading.rs  download_manager.rs  drag_overlay.rs  error_handling.rs  handlers.rs  messages.rs  mod.rs  panel_persistence.rs  panel_state.rs  realtime.rs  realtime_utils.rs  resize_handle.rs  section_drag.rs  utils.rs  view_styles.rs  views.rs  window_manager.rs
src/app/data/: data_loading.rs  download_manager.rs  mod.rs  trade_history.rs
src/app/handlers/: assets.rs  backtest.rs  errors.rs  handlers.rs  indicators.rs  mod.rs  notifications.rs  panels.rs  provider.rs  realtime.rs  series.rs  settings.rs  strategies.rs  trading.rs  windows.rs
src/app/persistence/: assets_persistence.rs  mod.rs  panel_persistence.rs  selected_assets_persistence.rs  strategy_persistence.rs  timeframe_persistence.rs  trading_persistence.rs
src/app/realtime/: connection.rs  download.rs  gaps.rs  mod.rs  realtime_utils.rs  save.rs  updates.rs
src/app/state/: account_info.rs  account_type.rs  backtest.rs  bottom_panel_sections.rs  indicator_params.rs  indicator_state.rs  loaders.rs  mod.rs  notifications.rs  panel_state.rs  trading_state.rs  ui_state.rs
src/app/strategies/: examples.rs  manager.rs  mod.rs  strategy.rs
src/app/trading/: api.rs  mod.rs
src/app/ui/: drag_overlay.rs  mod.rs
src/app/utils/: constants.rs  mod.rs  utils.rs
src/app/views/: account.rs  assets.rs  backtest_overlay.rs  context_menu_capture.rs  crosshair_overlay.rs  downloads_view.rs  (+9 more)
src/finance_chart/: axis_canvas.rs  axis_style.rs  binance_provider.rs  data_loader.rs  indicators.rs  macd_axis.rs  macd_chart.rs  macd_data.rs  macd_scaling.rs  messages.rs  mod.rs  provider_config.rs  realtime.rs  rsi_axis.rs  rsi_chart.rs  rsi_data.rs  series_select.rs  settings.rs  simple.rs  tools_canvas.rs  tools_panel_canvas.rs  volume_axis.rs  volume_chart.rs  widget.rs
(+77 files in other folders)
