[package]
name = "CandleChart"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Bibliothèque de visualisation de graphiques financiers (candlesticks) pour Iced"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/CandleChart"
keywords = ["finance", "chart", "candlestick", "iced", "trading"]
categories = ["rendering", "visualization"]

[lib]
name = "candlechart"
path = "src/lib.rs"

[[bin]]
name = "CandleChart"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", features = ["canvas", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
futures = "0.3"

[features]
default = []

[[example]]
name = "binance_example"
path = "examples/binance_example.rs"
