[package]
name = "CandleChart"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Application de visualisation de graphiques financiers (candlesticks) pour Iced"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/CandleChart"
keywords = ["finance", "chart", "candlestick", "iced", "trading"]
categories = ["rendering", "visualization"]

[[bin]]
name = "CandleChart"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", features = ["canvas", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
futures = "0.3"

[features]
default = []

# Optimisations pour le build release
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Profil pour le développement avec optimisations légères
[profile.dev]
opt-level = 1

# Profil pour les tests rapides
[profile.test]
opt-level = 1